TAG: pdfdownload-6-0-18-3
DATE: 2/08/2022
STAFF: jak
CHANGES: PMC download now catches and logs http errors
WTS2-812

TAG: pdfdownload-6-0-18-2
DATE: 2/08/2022
STAFF: jak
CHANGES: Revamped noPDF file/email generation to include num weeks left
        on the report & number of download failures
WTS2-771

TAG: pdfdownload-6-0-18-1
DATE: 1/28/2022
STAFF: jak
CHANGES: PMC download omits downloads for pdfs that don't have PMID in PMC
         Improved logging.
WTS2-771

TAG: pdfdownload-6-0-17-6
DATE: 12/10/2021
STAFF: jak
CHANGES: merged 6-0-16-2 back in, this commit got lost from Jon's work below
since it never got merged into master.
TR13344/WTS2-521 - chg downloaded PDF filenames to PMID_####.pdf

TAG: pdfdownload-6-0-17-5
DATE: 11/12/2021
STAFF: dbm
CHANGES: fixed download_elsevier_papers.py to handle date parameters when no jounal name is passed

TAG: pdfdownload-6-0-17-4
DATE: 10/20/2021
STAFF: jsb
CHANGES: more PMC and more SciDirect journals

TAG: pdfdownload-6-0-17-3
DATE: 07/26/2021
STAFF: jsb
CHANGES: brought in 17 journals from Elsevier's SciDirect

TAG: pdfdownload-6-0-17-2
DATE: 07/21/2021
STAFF: jsb
CHANGES: fixed bug where identify_missing_papers_plos.sh failed

TAG: pdfdownload-6-0-17-1
DATE: 07/21/2021
STAFF: jsb
CHANGES: removed Cilia; added Nat Commun & J Exp Med; restructed to prepare for Elsevier SciDirect

TAG: pdfdownload-6-0-16-2
DATE: 04/30/2021
STAFF: jak
CHANGES: TR13344/WTS2-521 - chg downloaded PDF filenames to PMID_####.pdf

TAG: pdfdownload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: pdfdownload-6-0-11-5
DATE: 12/07/2017
STAFF: sc
CHANGES: TR12737 - Remove PLOS Pathology
updated index file to correct newnew path 

TAG: pdfdownload-6-0-11-4
DATE: 12/06/2017
STAFF: sc
CHANGES: TR12737 - Remove PLOS Pathology